# pse-pipeline

./: .gitignore  Dockerfile  README.md  main.py  pse-pipeline-no-supabase.py  pse-pipeline.ipynb  pse-pipeline.py  pse_pipeline_duckdb.py  pse_pipeline_meta.py  pse_pipeline_meta_nosupa.py  pse_pipeline_price.py  pse_pipeline_price_nosupa.py  pyproject.toml
.github/workflows/: pse-pipeline.yml
dbt_pse_pipeline/: .user.yml  dbt_project.yml  profiles.yml  seed_fx_rates.py
dbt_pse_pipeline/models/mart/: industry_agg.sql  market_agg.sql  pse_clean_agg.sql
dbt_pse_pipeline/models/staging/: meta.sql  schema.yml  stg_price.sql
dbt_pse_pipeline/seeds/: fx_rates.csv
