[project]
name = "pse-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "duckdb>=1.5.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "supabase>=2.31.0",
]

[dependency-groups]
dev = [
    "duckcli>=0.2.1",
    "jupyter>=1.1.1",
    "lab>=8.9",
]
