[project]
name = "pse-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "duckdb>=1.5.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "supabase>=2.31.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "duckcli>=0.2.1",
    "jupyterlab>=4.6.0",
    "ruff>=0.15.18",
]
